scode/team_team/prob24/error.txt
  File "/var/www/html/scode/team_team/prob24/main.py", line 5
    for i in range(y)
                     ^
SyntaxError: expected ':'
